prometeo-dashboard/k8s/api-dash-dryrun.yml
---
# Source: api-dash/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-dash
  labels:
    app: api-dash
    chart: api-dash-1.0.0
    release: api-dash
    heritage: Helm
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: api-dash-service
  selector:
    app: api-dash
    release: api-dash
---
# Source: api-dash/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-dash-api-dash
  labels:
    app: api-dash
    chart: api-dash-1.0.0
    release: api-dash
    heritage: Helm
spec:
  replicas: 
  selector:
    matchLabels:
      app: api-dash
      release: api-dash
  template:
    metadata:
      labels:
        app: api-dash
        release: api-dash
    spec:
      imagePullSecrets:
        - name: all-icr-io
      containers:
        - name: api-dash
          image: "us.icr.io/upkar_ns/api-dash:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
