prometeo-dashboard/k8s/api-main-dryrun.yml
---
# Source: api-main/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-main
  labels:
    app: api-main
    chart: api-main-1.0.0
    release: api-main
    heritage: Helm
spec:
  type: ClusterIP
  ports:
  - port: 5000
    name: api-main-service
  selector:
    app: api-main
    release: api-main
---
# Source: api-main/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-main-api-main
  labels:
    app: api-main
    chart: api-main-1.0.0
    release: api-main
    heritage: Helm
spec:
  replicas: 
  selector:
    matchLabels:
      app: api-main
      release: api-main
  template:
    metadata:
      labels:
        app: api-main
        release: api-main
    spec:
      imagePullSecrets:
        - name: all-icr-io
      containers:
        - name: api-main
          image: "us.icr.io/upkar_ns/api-main:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
