prometeo-dashboard/k8s/ingress-dryrun.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
 name: promoteo-dash
spec:
 rules:
 - host: upkar-wdc04-b3c-4x16-12-162e406f043e20da9b0ef0731954a894-0000.us-east.containers.appdomain.cloud
   http:
     paths:
     - path: /api-auth
       backend:
         serviceName: api-auth
         servicePort: 4000
     - path: /api-main
       backend:
         serviceName: api-main
         servicePort: 5000
     - path: /
       backend:
         serviceName: api-dash
         servicePort: 80
